@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Sys-Statistics-Linux
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sys-Statistics-Linux/ChangeLog,v 1.38 2009/06/07 11:27:06 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sys-Statistics-Linux/ChangeLog,v 1.39 2009/08/18 20:35:05 tove Exp $
+
+*Sys-Statistics-Linux-0.54 (18 Aug 2009)
+
+  18 Aug 2009; Torsten Veller <tove@gentoo.org>
+  +Sys-Statistics-Linux-0.54.ebuild:
+  Version bump
 
 *Sys-Statistics-Linux-0.52 (07 Jun 2009)
 
