@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.104 2009/07/21 06:15:28 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.105 2009/08/18 20:39:19 tove Exp $
+
+*DateTime-TimeZone-0.95 (18 Aug 2009)
+
+  18 Aug 2009; Torsten Veller <tove@gentoo.org>
+  +DateTime-TimeZone-0.95.ebuild:
+  Version bump
 
 *DateTime-TimeZone-0.93 (21 Jul 2009)
 
